tests/cases/traits/ok/structural-capability-multi-method.ari
struct Packet {
  value: i64,
}

impl Packet {
  fn serialize(self) -> i64 {
    self.value + 1
  }

  fn add(self, amount: i64) -> i64 {
    self.value + amount
  }
}

fn save(value: has { serialize() -> i64, add(i64) -> i64 }, amount: i64) -> i64 {
  value.serialize() + value.add(amount)
}

fn main() -> i64 {
  return save(Packet { value: 20 }, 2);
}
