tests/cases/traits/errors/structural-capability-multi-missing.ari
struct Packet {
  value: i64,
}

impl Packet {
  fn serialize(self) -> i64 {
    self.value
  }
}

fn save(value: has { serialize() -> i64, add(i64) -> i64 }, amount: i64) -> i64 {
  value.serialize() + value.add(amount)
}

fn main() -> i64 {
  return save(Packet { value: 1 }, 2);
}
